# personal-mcp

./: .clauderc  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitkeep
src/: __main__.py  markdown_storage.py  models.py  server.py  storage.py
